# rainbow-challenge

./: .gitignore
rainbow/: .env_example  .gitignore  LICENSE  conftest.py  manage.py  pyproject.toml  pytest.ini  readme.md  requirements.txt
rainbow/challenge/: __init__.py  admin.py  translation.py  urls.py
rainbow/challenge/forms/: article.py  base.py  event_participant.py
rainbow/challenge/migrations/: 0001_initial.py  0002_auto_20210318_1302.py  0002_auto_20210327_1302.py  0002_auto_20210713_1552.py  0003_auto_20210318_1436.py  0003_auto_20210327_1309.py  0003_customchallenge_quizchallenge.py  0004_auto_20210318_1451.py  0004_auto_20210401_1629.py  0004_auto_20210721_1651.py  0005_auto_20210318_1634.py  0005_auto_20210408_1235.py  0005_challenge_image.py  0006_auto_20210921_1707.py  0006_prize.py  0006_region_uuid.py  0007_auto_20211108_1641.py  0007_prize_price.py  0008_alter_eventparticipantchallenge_qr_code_file.py  0008_claimedprize.py  0009_auto_20220409_1341.py  0009_challenge_published.py  0010_alter_eventparticipantchallenge_qr_code.py  0010_auto_20210505_1220.py  0011_auto_20210513_1655.py  0011_rename_name_challenge__name_challenge_topic.py  0012_auto_20210710_1234.py  0012_topic_alter_challenge_topic.py  0013_alter_challenge_topic_alter_topic_topic.py  0014_topic_topic_en_topic_topic_lt_topic_topic_pt_and_more.py  0015_remove_topic_topic_en_remove_topic_topic_lt_and_more.py  0016_topic_topic_en_topic_topic_lt_topic_topic_pt_and_more.py  0017_remove_topic_topic_en_remove_topic_topic_lt_and_more.py  (+5 more)
rainbow/dashboard/: urls.py
rainbow/docs/: app_structure.md  challenge_actions.md  challenges.md  index.md  joined_challenges.md  joining_challenges.md
rainbow/joined_challenge/: admin.py  apps.py  permissions.py  urls.py
rainbow/message/: admin.py  models.py  serializers.py  urls.py  views.py
rainbow/news/: admin.py  models.py  serializers.py  translation.py  urls.py  views.py
rainbow/quiz/: admin.py  models.py  serializers.py  urls.py  views.py
rainbow/rainbow_project/: asgi.py  celery.py  settings.py  settings_dev.py  settings_test.py  urls.py  wsgi.py
rainbow/results/: admin.py  tasks.py  translation.py  urls.py  utils.py
rainbow/teams/: admin.py  models.py
rainbow/templates/: firebase-messaging-sw.js
rainbow/tests/: baker_recipes.py  test_account_deletion.py
rainbow/texts/: admin.py  apps.py  models.py  serializers.py  translation.py  urls.py  views.py
rainbow/user/: admin.py  baker_recipes.py  conftest.py  fixtures.py  forms.py  mixins.py  models.py  serializers.py  test_user.py  tests.py  urls.py  views.py
(+195 files in other folders)
