[project]
name = "rainbow-challenge"
version = "0.1.0"
description = "Backend for the Rainbow Challenge — a Django REST API."
readme = "readme.md"
requires-python = ">=3.10,<3.11"

# Direct (top-level) dependencies only. These are the packages the project
# imports or configures itself (INSTALLED_APPS / MIDDLEWARE / settings) plus the
# runtime infrastructure (DB driver, Celery broker, WSGI server, image library).
# Transitive dependencies are resolved and pinned in uv.lock — do not list them
# here. Versions match the previous requirements.txt for a zero-drift migration;
# loosen to lower bounds when you next want to take upgrades.
dependencies = [
    # Django + DRF stack
    "Django==4.2.30",
    "djangorestframework==3.15.2",
    "djoser==2.3.0",
    "drf-spectacular==0.25.1",
    # Django apps (INSTALLED_APPS / MIDDLEWARE)
    "django-cors-headers==3.13.0",
    "django-extensions==3.2.1",
    "django-import-export==3.0.2",
    "django-modeltranslation==0.19.3",
    "django-nested-inline==0.4.5",
    "django-otp==1.1.4",
    "django-private-storage==3.1.1",
    "django-widget-tweaks==1.4.12",
    "django-advanced-password-validation==1.1.1",
    "social-auth-app-django==5.4.3",
    # Async tasks + cache/broker
    "celery==5.2.7",
    "redis==4.4.4",
    # Runtime infrastructure
    "psycopg2-binary==2.9.5",
    "gunicorn==23.0.0",
    "pillow==12.2.0",
    # Push notifications / Firebase
    "firebase-admin==5.4.0",
    "fcm-django==1.0.12",
    # Misc libraries imported directly in the code
    "qrcode==7.3.1",
    "requests==2.33.0",
    "httpx==0.26.0",
    "PyJWT==2.12.0",
    "python-dotenv==1.2.2",
    "isoweek==1.3.3",
    # Provides pkg_resources, which django-widget-tweaks (and other older
    # packages) import at runtime. Was implicitly present in the old virtualenv;
    # uv's minimal .venv does not include it unless declared.
    "setuptools>=68,<81",
]

[dependency-groups]
# Dev/test tooling. `uv sync` installs these by default; use
# `uv sync --no-dev` for a production install.
dev = [
    "pytest==9.0.3",
    "pytest-django==4.5.2",
    "model-bakery==1.9.0",
    "factory-boy==3.3.0",
    "ruff==0.2.2",
]

[tool.uv]
# This is a Django project, not an installable library — don't try to build it.
package = false
# Preserve the security floor the maintainer set in recent commits (the
# cryptography 46 / cffi bump). uv resolves cffi to a compatible version.
constraint-dependencies = ["cryptography>=46.0.7"]
